Overview of changes in Gtk3 0.015 [2013-12-08]
==============================================

* Add overrides for Gtk3::RadioAction, Gtk3::RadioButton, Gtk3::RadioMenuItem
  and Gtk3::RadioToolButton.
* Add an override for Gtk3::SizeGroup::get_widgets.
* Add an override for Gtk3::Widget::render_icon.
* Add an override for Pango::Layout::set_text.
* Require Test::Simple >= 0.96.

Overview of changes in Gtk3 0.014 [2013-10-18]
==============================================

* dist.ini: document 'is_trial', sets 'testing' in metadata
* dist.ini: Add MetaJSON, set MetaYAML version = 2
* dist.ini: Add [MetaResources] block with correct URLs; fixes RT#89118

Overview of changes in Gtk3 0.013 [2013-09-30]
==============================================

* Add forgotten release notes.
* Reenable UploadToCPAN Dist::Zilla plugin

Overview of changes in Gtk3 0.012 [2013-09-30]
==============================================

* Add overrides for Gtk3::Image.
∗ Fix partial misquoting in croak usage
* Do not use 'defined' on an array (Spotted by Thierry Vignaud)
* Add overrides for Gtk3::Image (Based on a patch by Dave M.)
* Add two more tests for Gtk3::TextBuffer (Zach Morgan)

Overview of changes in Gtk3 0.011 [2013-09-01]
==============================================

* Add forgotten release notes.

Overview of changes in Gtk3 0.010 [2013-09-01]
==============================================

* Gtk3::HBox/Gtk3::VBox: use correct defaults in constructors.
* Gtk3::TextBuffer::create_tag: handle all property pairs.
* Fix a few test failures for older gtk+.

Overview of changes in Gtk3 0.009 [2013-02-14]
==============================================

* Add overrides for Gtk3::Container.
* Add overrides for Gtk3::Dialog and Gtk3::InfoBar, including the conversion of
  predefined response IDs to nick names.
* Add overrides for Gtk3::Editable.
* Add overrides for Gtk3::FileChooserDialog.
* Add overrides for Gtk3::RecentChooserDialog.
* Add overrides for Gtk3::TextBuffer.