@@ -1,3 +1,4 @@
+# This file was automatically generated by Dist::Zilla::Plugin::Manifest v5.013.
 LICENSE
 MANIFEST
 META.json
