@@ -4,7 +4,7 @@
       "Torsten Schoenfeld <kaffeetisch@gmx.de>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.131560",
+   "generated_by" : "Dist::Zilla version 5.013, CPAN::Meta::Converter version 2.133380",
    "license" : [
       "lgpl_2_1"
    ],
@@ -40,8 +40,9 @@
          "type" : "git",
          "url" : "git://git.gnome.org/perl-Gtk3",
          "web" : "http://git.gnome.org/browse/perl-Gtk3"
-      }
+      },
+      "x_twitter" : "https://twitter.com/GTKPerl"
    },
-   "version" : "0.015"
+   "version" : "0.016"
 }
 
