@@ -29,12 +29,80 @@ and these Perl modules:
 
   Glib::Object::Introspection >= 0.002
 
+HOW TO CONTACT US
+-----------------
+
+Homepage:               http://gtk2-perl.sourceforge.net/
+Mailing list:           gtk-perl-list [at] gnome.org
+Mailing list archives:  https://mail.gnome.org/archives/gtk-perl-list/
+IRC:                    irc://irc.gnome.org/#gtk-perl
+E-mail bug submission via CPAN's RT:
+                bug-Gtk3 [at] rt.cpan.org
+Web bug submission via gnome.org's bugzilla:
+                http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-perl
+
+Please do not contact any of the maintainers directly unless they ask you to.
+The first point of contact for questions/problems/issues should always be the
+mailing list.
+
 
 BUG REPORTS
 -----------
 
-Please report bugs to the gnome-perl product in GNOME's Bugzilla:
-<http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-perl>
+For help with problems, please contact the mailing list (above).  If you
+already know you have a bug, please file it with one of the bug trackers
+below.  With any problems and/or bug reports, it's always helpful for the
+developers to have the following information:
+
+- A small script that demonstrates the problem; this is not required, however,
+  it will get your issue looked at much faster than a description of the
+  problem alone.
+- Version of Perl (perl -v)
+- Versions of Gtk2-Perl modules (Glib/Gtk2/Pango/Cairo)
+- Optional, but nice to have: versions of GTK+ libraries on your system
+  (libglib, libgtk+, libpango, libcairo, etc.)
+
+There are multiple project bug trackers, please choose the one you are most
+comfortable with using and/or already have an account for.
+
+Request Tracker:
+- submitting bugs via the Web (requires a PAUSE account/Bitcard):
+  https://rt.cpan.org/Public/Bug/Report.html?Queue=Gtk3
+- submitting bugs via e-mail (open to anyone with e-mail):
+  bug-Gtk3 [at] rt.cpan.org
+
+Gnome's bugtracker:
+- report bugs to the 'gnome-perl' product (requires login)
+  http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-perl
+
+PATCH SUBMISSION GUIDELINES
+---------------------------
+
+You can send us patches by...
+- E-mailing it to the mailing list (above); please use a pastebin service of
+  some kind for longer patchfiles (over say 20k in size).
+- Those with gnome.org Git ID's can push trivial patches to git directly; if
+  you're not sure what a trivial patch is, please ask first on the mailing
+  list prior to pushing your commit.
+
+OBTAINING SOURCE FROM THE GNOME.ORG GIT REPO
+--------------------------------------------
+
+Assuming you already have the 'git' command installed on your system, you can
+use the 'git://' protocol:
+
+ git clone git://git.gnome.org/perl-Gtk3
+
+Or, read-only access via HTTP:
+
+ git clone http://git.gnome.org/browse/perl-Gtk3
+
+To update an existing clone of the source:
+
+ git pull
+
+Most Linux distros package the 'git' command in a package called either 'git'
+or 'git-core'.
 
 
 COPYRIGHT AND LICENSE
@@ -46,3 +114,10 @@ This library is free software; you can redistribute it and/or modify it under
 the terms of the GNU Library General Public License as published by the Free
 Software Foundation; either version 2.1 of the License, or (at your option) any
 later version.
+
+This library is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE.
+
+See the LICENSE file in the top-level directory of this distribution for the
+full license terms.
