@@ -1,5 +1,5 @@
 name    = Gtk3
-version = 0.015
+version = 0.016
 author  = Torsten Schoenfeld <kaffeetisch@gmx.de>
 license = LGPL_2_1
 copyright_holder = Torsten Schoenfeld
@@ -31,6 +31,15 @@ Test::Simple = 0.96 ; for the fix for is() and objects with overloading
 filename = NEWS
 format = Overview of changes in Gtk3 %v [%{yyyy-MM-dd}d]%n==============================================
 
+[MetaResources]
+homepage          = http://gtk2-perl.sourceforge.net
+bugtracker.web    = http://rt.cpan.org/Public/Dist/Display.html?Name=Gtk3
+bugtracker.mailto = bug-Gtk3 [at] rt.cpan.org
+repository.url    = git://git.gnome.org/perl-Gtk3
+repository.web    = http://git.gnome.org/browse/perl-Gtk3
+repository.type   = git
+x_twitter         = https://twitter.com/GTKPerl
+
 [Git::Check]
 changelog = NEWS
 [Git::Commit]
@@ -39,14 +48,6 @@ commit_msg = Release v%v%n%n%c
 [Git::Tag]
 signed = 1
 [Git::Push]
-[MetaResources]
-homepage          = http://gtk2-perl.sourceforge.net
-bugtracker.web    = http://rt.cpan.org/Public/Dist/Display.html?Name=Gtk3
-bugtracker.mailto = bug-Gtk3 [at] rt.cpan.org
-repository.url    = git://git.gnome.org/perl-Gtk3
-repository.web    = http://git.gnome.org/browse/perl-Gtk3
-repository.type   = git
-
 [TestRelease]
 [ConfirmRelease]
 [UploadToCPAN]
